--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,17 @@
 	<dependency>
     	<groupId>org.spigotmc</groupId>
     	<artifactId>spigot-api</artifactId>
-    	<version>1.16.4-R0.1-SNAPSHOT</version>
+    	<version>1.21.4-R0.1-SNAPSHOT</version>
     	<scope>provided</scope>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-core</artifactId>
+    <version>6.2.2</version>
+</dependency>
+
 
   </dependencies>
 
@@ -26,8 +34,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- ↓ Java version 12 -->
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <!-- plugin.yml を pom.xml と連動させる -->
