--- a/pom.xml
+++ b/pom.xml
@@ -2,51 +2,46 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.motschik</groupId>
   <artifactId>CplMinecart</artifactId>
-  <version>0.1.3-SNAPSHOT</version>
+  <version>0.2.0-SNAPSHOT</version>
 
-  <repositories>
-    <repository>
-      <id>spigot-repo</id>
-      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-    </repository>
-  </repositories>
+	<repositories>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+		</repository>
+		<repository>
+			<id>maven2</id>
+			<url>https://repo1.maven.org/maven2/</url>
+		</repository>
+	</repositories>
 
-  <dependencies>
-  <!-- https://mvnrepository.com/artifact/org.spigotmc/spigot-api -->
-	<dependency>
-    	<groupId>org.spigotmc</groupId>
-    	<artifactId>spigot-api</artifactId>
-    	<version>1.21.4-R0.1-SNAPSHOT</version>
-    	<scope>provided</scope>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-core</artifactId>
-    <version>6.2.2</version>
-</dependency>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.spigotmc/spigot-api -->
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.21.4-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
 
+	</dependencies>
 
-  </dependencies>
+	<!-- ↓ プロパティ設定 -->
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<!-- ↓ Java version 12 -->
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+	</properties>
 
-    <!-- ↓ プロパティ設定 -->
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- ↓ Java version 12 -->
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-  </properties>
-
-  <!-- plugin.yml を pom.xml と連動させる -->
-  <build>
-    <resources>
-      <resource>
-        <targetPath>.</targetPath>
-        <filtering>true</filtering>
-        <directory>src/main/resources/</directory>
-      </resource>
-    </resources>
-  </build>
-
+	<!-- plugin.yml を pom.xml と連動させる -->
+	<build>
+		<resources>
+			<resource>
+				<targetPath>.</targetPath>
+				<filtering>true</filtering>
+				<directory>src/main/resources/</directory>
+			</resource>
+		</resources>
+	</build>
 </project>
